--- a/fonts/pff_icons.css
+++ b/fonts/pff_icons.css
@@ -1,19 +1,14 @@
-@font-face {
+font-face {
 	font-family: 'PFF-icons';
-	src:url('../fonts/PFF-icons.eot');
+	src:url('fonts/PFF-icons.eot');
+	src:url('fonts/PFF-icons.eot?#iefix') format('embedded-opentype'),
+		url('fonts/PFF-icons.ttf') format('truetype'),
+		url('fonts/PFF-icons.woff') format('woff'),
+		url('fonts/PFF-icons.svg#PFF-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
-@font-face {
-	font-family: 'PFF-icons';
-	src:url('../fonts/PFF-icons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/PFF-icons.ttf') format('truetype'),
-		url('../fonts/PFF-icons.woff') format('woff'),
-		url('../fonts/PFF-icons.svg#PFF-icons') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 [class^="PFFicon-"], [class*=" PFFicon-"] {
 	font-family: 'PFF-icons';
 	speak: none;
