--- a/fonts/pff_icons.css
+++ b/fonts/pff_icons.css
@@ -1,4 +1,4 @@
-font-face {
+@font-face {
 	font-family: 'PFF-icons';
 	src:url('../fonts/PFF-icons.eot');
 	src:url('../fonts/PFF-icons.eot?#iefix') format('embedded-opentype'),
