--- a/fonts/pff-ico.css
+++ b/fonts/pff-ico.css
@@ -1,10 +1,10 @@
 @font-face{
 	font-family: 'PFF-icons';
-	src:url('../fonts/PFF-icons.eot');
-	src:url('../fonts/PFF-icons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/PFF-icons.ttf') format('truetype'),
-		url('../fonts/PFF-icons.woff') format('woff'),
-		url('../fonts/PFF-icons.svg#PFF-icons') format('svg');
+	src:url('http://meeroo.github.io/fonts/fonts/PFF-icons.eot');
+	src:url('http://meeroo.github.io/fonts/fonts/PFF-icons.eot?#iefix') format('embedded-opentype'),
+		url('http://meeroo.github.io/fonts/fonts/PFF-icons.ttf') format('truetype'),
+		url('http://meeroo.github.io/fonts/fonts/PFF-icons.woff') format('woff'),
+		url('http://meeroo.github.io/fonts/fonts/PFF-icons.svg#PFF-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
